# docs/swagger.json
@@ -93,7 +93,7 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "Create Product.",
+                "description": "Save Product.",
                 "consumes": [
                     "application/json"
                 ],
@@ -103,7 +103,7 @@
                 "tags": [
                     "Products"
                 ],
-                "summary": "Create Product",
+                "summary": "Save Product",
                 "parameters": [
                     {
                         "description": "Product VM",
@@ -116,8 +116,8 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
+                    "201": {
+                        "description": "Created",
                         "schema": {
                             "$ref": "#/definitions/vm.ProductSavingVM"
                         }
@@ -146,6 +146,44 @@
                     "Products"
                 ],
                 "summary": "get product.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Product Id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/vm.ProductVM"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    },
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Delete product.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Products"
+                ],
+                "summary": "Delete product.",
                 "parameters": [
                     {
                         "type": "string",
